--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@faker-js/faker": "^9.7.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
